@@ -1,3 +1,7 @@
+2005-01-16  Mark Kettenis  <kettenis@gnu.org>
+
+	* sparc-tdep.c (sparc_integral_or_pointer_p): Simplify.
+
 2005-01-16  Andrew Cagney  <cagney@gnu.org>
 
 	* exceptions.c (struct catcher): Delete saved_error_pre_print and
